--- a/totalhr.Resources/Resources/EnumDescription.resx
+++ b/totalhr.Resources/Resources/EnumDescription.resx
@@ -129,6 +129,21 @@
   <data name="EveryXTime" xml:space="preserve">
     <value>Every</value>
   </data>
+  <data name="EvtDay" xml:space="preserve">
+    <value>Day</value>
+  </data>
+  <data name="EvtHour" xml:space="preserve">
+    <value>Hour</value>
+  </data>
+  <data name="EvtMinute" xml:space="preserve">
+    <value>Minute</value>
+  </data>
+  <data name="EvtMonth" xml:space="preserve">
+    <value>Month</value>
+  </data>
+  <data name="EvtWeek" xml:space="preserve">
+    <value>Week</value>
+  </data>
   <data name="MonthlyOnDates" xml:space="preserve">
     <value>Monthly (on chosen dates)</value>
   </data>
