More changes for calendar event reminders

--- a/totalhr.Resources/Resources/FormMessages.resx
+++ b/totalhr.Resources/Resources/FormMessages.resx
@@ -636,4 +636,7 @@
   <data name="MSG_Details_Saved" xml:space="preserve">
     <value>Your details have been saved successfully!</value>
   </data>
+  <data name="MSG_Duplicate_Reminder" xml:space="preserve">
+    <value>Reminder already added.</value>
+  </data>
 </root>
