calendar Event changes

--- a/totalhr.Resources/Resources/Common.resx
+++ b/totalhr.Resources/Resources/Common.resx
@@ -186,4 +186,7 @@
   <data name="V_Show" xml:space="preserve">
     <value>Show</value>
   </data>
+  <data name="V_Before" xml:space="preserve">
+    <value>Before</value>
+  </data>
 </root>
