--- a/totalhr.Resources/Resources/Account.resx
+++ b/totalhr.Resources/Resources/Account.resx
@@ -129,4 +129,7 @@
   <data name="tt_Personal_Details" xml:space="preserve">
     <value>Personal Details</value>
   </data>
+  <data name="tt_My_Documents" xml:space="preserve">
+    <value>Company Documents</value>
+  </data>
 </root>
