Changes for the document file management

--- a/totalhr.Resources/Resources/Document.resx
+++ b/totalhr.Resources/Resources/Document.resx
@@ -151,7 +151,7 @@
     <value>Create new document</value>
   </data>
   <data name="V_Create_New_Folder" xml:space="preserve">
-    <value>Create new folder</value>
+    <value>Create Folder</value>
   </data>
   <data name="V_DisplayName" xml:space="preserve">
     <value>DisplayName</value>
@@ -173,5 +173,92 @@
   </data>
   <data name="V_Upload" xml:space="preserve">
     <value>Upload</value>
+  </data>
+  <data name="Error_NoDept_ForPermission" xml:space="preserve">
+    <value>You haven't selected any department.</value>
+  </data>
+  <data name="Error_NoUser_ForPermission" xml:space="preserve">
+    <value>You haven't selected any user.</value>
+  </data>
+  <data name="V_Add_Folder" xml:space="preserve">
+    <value>Add Folder</value>
+  </data>
+  <data name="V_Folder_Make_Public" xml:space="preserve">
+    <value>Make public</value>
+  </data>
+  <data name="V_New_Folder" xml:space="preserve">
+    <value>New Folder</value>
+  </data>
+  <data name="V_Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="v_Select" xml:space="preserve">
+    <value>Select</value>
+  </data>
+  <data name="V_Select_Department" xml:space="preserve">
+    <value>Select Department</value>
+  </data>
+  <data name="V_Select_User" xml:space="preserve">
+    <value>Select user</value>
+  </data>
+  <data name="Error_No_Folder" xml:space="preserve">
+    <value>Sorry but no folder or document to view.</value>
+  </data>
+  <data name="TH_Created" xml:space="preserve">
+    <value>Created</value>
+  </data>
+  <data name="TH_CreatedBy" xml:space="preserve">
+    <value>Created By</value>
+  </data>
+  <data name="TH_Details" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="TH_DisplayName" xml:space="preserve">
+    <value>DisplayName</value>
+  </data>
+  <data name="TH_Downloads" xml:space="preserve">
+    <value>Downloads</value>
+  </data>
+  <data name="TH_Permissions" xml:space="preserve">
+    <value>Permissions</value>
+  </data>
+  <data name="TH_Views" xml:space="preserve">
+    <value>Views</value>
+  </data>
+  <data name="V_No_Folder" xml:space="preserve">
+    <value>Document(s) With No Folder</value>
+  </data>
+  <data name="Error_No_Doc_Details" xml:space="preserve">
+    <value>Sorry couldn't retrieve document details.</value>
+  </data>
+  <data name="V_Download" xml:space="preserve">
+    <value>Download</value>
+  </data>
+  <data name="V_Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="V_Permission_Company" xml:space="preserve">
+    <value>Whole company</value>
+  </data>
+  <data name="V_Permission_Private" xml:space="preserve">
+    <value>Private</value>
+  </data>
+  <data name="Error_Could_Not_Update_Doc" xml:space="preserve">
+    <value>Sorry could not update document!</value>
+  </data>
+  <data name="V_Archive" xml:space="preserve">
+    <value>Archive</value>
+  </data>
+  <data name="V_Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="V_Details" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="V_Doc_Edit" xml:space="preserve">
+    <value>Document Edit</value>
+  </data>
+  <data name="V_View" xml:space="preserve">
+    <value>View</value>
   </data>
 </root>
