--- a/totalhr.Resources/Resources/Document.resx
+++ b/totalhr.Resources/Resources/Document.resx
@@ -360,4 +360,19 @@
   <data name="V_Share_Link" xml:space="preserve">
     <value>Send as link</value>
   </data>
+  <data name="Error_Cant_Edit_Others_Doc" xml:space="preserve">
+    <value>You cannot edit somebody else's document!</value>
+  </data>
+  <data name="V_Close_Dialog" xml:space="preserve">
+    <value>Close Dialog</value>
+  </data>
+  <data name="V_Document_Share_Complete" xml:space="preserve">
+    <value>Document Share Complete</value>
+  </data>
+  <data name="V_Document_Share_Message" xml:space="preserve">
+    <value>You have successfully shared the following document:{0}</value>
+  </data>
+  <data name="V_Document_Was_Shared_With" xml:space="preserve">
+    <value>The document was sent to {0}</value>
+  </data>
 </root>
