--- a/totalhr.Resources/Resources/Account.resx
+++ b/totalhr.Resources/Resources/Account.resx
@@ -186,4 +186,10 @@
   <data name="V_Documents" xml:space="preserve">
     <value>Documents</value>
   </data>
+  <data name="MSG_User_Created" xml:space="preserve">
+    <value>You have successfully created the employee {0}. &lt;br/&gt; You will also need to assign some profiles to this employee as no user can access the system without profiles. Select one of the options below to continue.</value>
+  </data>
+  <data name="V_User_Created" xml:space="preserve">
+    <value>User Created</value>
+  </data>
 </root>
